# materialxocio

./: .gitignore  README.html  README.md  index.html  pyproject.toml
.github/workflows/: static.yml
docs/: Doxyfile  doxygen_log.txt  mtlx_ocio.html  mtlx_ocio.ipynb  mtlx_ocio.py  notebook_log.txt
docs/data/: acescg_to_lin_rec709_color3.mtlx  mx_acescg_to_lin_rec709_color4.glsl  mx_acescg_to_lin_rec709_color4.osl
docs/html/: ____init_____8py_source.html  _r_e_a_d_m_e_8html_source.html  annotated.html  annotated_dup.js  classes.html  classmaterialxocio_1_1core_1_1_o_c_i_o_materialax_generator-members.html  classmaterialxocio_1_1core_1_1_o_c_i_o_materialax_generator.html  classmaterialxocio_1_1core_1_1_o_c_i_o_materialax_generator.js  core_8py_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_fac5a7ed8ffd2d94e13f059ed632e0b1.html  dir_fac5a7ed8ffd2d94e13f059ed632e0b1.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  gen_o_c_i_o_definitions_8py_source.html  index.html  md__2_users_2bernardkwok_2work_2materialxocio_2_r_e_a_d_m_e.html  md___users_bernardkwok_work_materialxocio__r_e_a_d_m_e.html  md__d_1_2_work_2materialx_2materialxocio_2_r_e_a_d_m_e.html  md__d___work_materialx_materialxocio__r_e_a_d_m_e.html  mtlx__ocio_8html_source.html  namespacematerialxocio_1_1core.html  namespacematerialxocio_1_1core.js  namespacematerialxocio_1_1gen_o_c_i_o_definitions.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  (+4 more)
utilities/: build_docs.sh  build_examples.sh
(+101 files in other folders)
