[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "materialxocio"
version = "0.1.39.5"
authors = [
  { name="Bernard Kwok", email="kwokcb@gmail.com" },
]
description = "Utilities for MaterialX 1.38.9 and OCIO 2.2 and above"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "materialx>=1.39.4",
    "opencolorio>=2.2.0"
]
[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-data]
"materialxjson.data" = ["*.*"]

[project.urls]
"Homepage" = "https://kwokcb.github.io/materialxocio/"
"Issues" = "https://github.com/kwokcb/materialxocio/issues"
"Source Code" = "https://github.com/kwokcb/materialxocio"
"Documentation" = "https://kwokcb.github.io/materialxocio/"
